<resources>
    <string name="app_name">QR &amp; Barcode Scanner 2026</string>
    <string name="network">Network</string>
    <string name="password">Password</string>
    <string name="text">Text</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="x">X</string>
    <string name="wifi">Wifi</string>
    <string name="back">Back</string>
    <string name="result">Result</string>
    <string name="icon_qr">Icon Qr</string>
    <string name="generate_qr_code">Generate Qr Code</string>
    <string name="history">History</string>
    <string name="not_found_qr">Not found Qr Code</string>
    <string name="choose_pic">choose Pic</string>
    <string name="flash">flash</string>
    <string name="setting">Setting</string>
    <string name="data">Data</string>
    <string name="time_demo">2024-02-20</string>
    <string name="show_qr_code">Show Qr Code</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_done">Vibration when scan is done.</string>
    <string name="sound">Sound</string>
    <string name="sound_desc">Beep when scan is done.</string>
    <string name="support">Support</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_desc">Follow our policies that benefits you.</string>
    <string name="share">Share</string>
    <string name="icon_delete">icon delete</string>
    <string name="language">Language</string>
    <string name="string_vi">Vietnamese</string>
    <string name="string_en">English</string>
    <string name="language_desc">Change language</string>
    <string name="generate">Generate</string>
    <string name="delete">Delete</string>
    <string name="delete_desc">Delete all item in history</string>
    <string name="qr_code_not_found">Qr Code not found</string>
    <string name="no_image_selected">No image selected</string>
    <string name="permission_is_required_to_access_gallery">Permission is required to access gallery</string>
    <string name="permission_denied">Permission denied</string>
    <string name="all_data_deleted">All data deleted</string>
    <string name="scan">Scan</string>
    <string name="created">Created</string>
    <string name="change_vibration_success">Change Success</string>
    <string name="change_vibration_fail">Change Fail</string>
    <string name="change_sound_success">Change Success</string>
    <string name="change_sound_fail">Change Fail</string>
    <string name="change_language_success">Change Success</string>
    <string name="change_language_fail">Change Fail</string>
    <string name="generate_qr">Generate QR</string>
    <string name="onboarding_tittle1">Welcome to QrScan TeamT</string>
    <string name="onboarding_desc1">A smart and convenient QR code scanner that saves your time and optimizes your daily tasks.</string>
    <string name="onboarding_tittle2">Elevate Your Experience</string>
    <string name="onboarding_desc2">Packed with features: scan codes, save history, and share instantly. Simple and efficient in just seconds.</string>
    <string name="onboarding_tittle3">If you love this app, please rate us 5 stars</string>
    <string name="onboarding_desc3">Go and enjoy our features for free and make your life easy with us.</string>
    <string name="change_language_tittle">Language change successful</string>
    <string name="lbl_more_apps">More apps</string>
    <string name="title_more_apps">More apps from us</string>
    <string name="alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="no_text_tittle">You have not entered any text</string>
    <string name="delete_all_warn_title">Are you sure you want to delete it?</string>
    <string name="delete_success">Delete Success</string>
    <string name="search">Search</string>
    <string name="open">Open</string>
    <string name="save_success">Save success</string>
    <string name="save_qrcode">Save QrCode</string>
    <string name="copy">Copy</string>
    <string name="hide_qr_code">Hide Qr code</string>
    <string name="rate_app">Rate App</string>
    <string name="title_rate_app">Rate the app</string>
    <string name="desc_rate_app">Do you like our app? Please take a moment to rate and share your feelings!</string>
    <string name="title_rate_now">⭐ Rate now</string>
    <string name="lbl_later">Later</string>
    <string name="lbl_no_rate">No more display</string>
</resources>