<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/back"
        android:padding="10dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextView_White_20sp"
        android:layout_marginStart="20sp"
        android:text="@string/language"
        app:layout_constraintBottom_toBottomOf="@+id/imgBack"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="@+id/imgBack" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clVietNamese"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/border_main_color_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack">

        <TextView
            android:id="@+id/titleVietnamese"
            style="@style/TextView_White_16sp"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:text="@string/string_vi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEnglish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/border_main_color_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clVietNamese">

        <TextView
            android:id="@+id/titleEnglish"
            style="@style/TextView_White_16sp"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:text="@string/string_en"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>