<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/main_color_dark"
            android:theme="@style/ToolBarStyle"
            app:navigationIcon="?android:attr/homeAsUpIndicator"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/result" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/main_color_dark">

                    <ImageView
                        android:id="@+id/imgIcon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="24dp"
                        android:contentDescription="@string/icon_qr"
                        android:src="@drawable/item_qr"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvTittle"
                        style="@style/TextView_White_16sp"
                        android:layout_marginStart="16dp"
                        android:text="@string/data"
                        app:layout_constraintStart_toEndOf="@+id/imgIcon"
                        app:layout_constraintTop_toTopOf="@+id/imgIcon" />

                    <TextView
                        android:id="@+id/tvTime"
                        style="@style/TextView_White_14sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_demo"
                        app:layout_constraintBottom_toBottomOf="@+id/imgIcon"
                        app:layout_constraintStart_toStartOf="@+id/tvTittle"
                        app:layout_constraintTop_toBottomOf="@+id/tvTittle" />

                    <View
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        android:background="#BFBFBF"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgIcon" />

                    <TextView
                        android:id="@+id/result"
                        style="@style/TextView_White_16sp"
                        android:layout_width="0dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/text"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/line" />

                    <ImageView
                        android:id="@+id/imgQr"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_margin="16dp"
                        android:contentDescription="@string/icon_qr"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.492"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/result"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:id="@+id/viewShowQr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgQr">

                        <TextView
                            android:id="@+id/tvShowQr"
                            style="@style/TextView_White_16sp"
                            android:text="@string/show_qr_code"
                            android:textColor="@color/main_color_light" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <include
                android:id="@+id/llAction"
                layout="@layout/layout_action_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="140dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>